<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="10dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:padding="5dp"
                android:text="@string/msg_status"
                android:theme="@style/txt_cabecario" />

            <CheckBox
                android:id="@+id/status_uso_medicamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/esta_tratamento"
                android:theme="@style/EditText" />

            <MultiAutoCompleteTextView
                android:id="@+id/status_nome_medicamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_medicamento"
                android:theme="@style/EditText"
                android:visibility="invisible"/>

            <EditText
                android:id="@+id/status_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/status_descricao"
                android:theme="@style/EditText" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_margin="8dp"
                android:background="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="238dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/status_txt_emoji"
                android:textColor="@color/colorPrimaryDark" />

            <com.hsalf.smilerating.SmileRating
                android:id="@+id/status_emoji"
                android:layout_width="237dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:onClick="clickStatus"
                app:textNonSelectionColor="@color/colorPrimaryDark" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_margin="8dp"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_collapseMode="pin"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <Button
                    android:id="@+id/status_salvar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:onClick="clickStatus"
                    android:text="@string/salvar"
                    android:textColor="@color/colorPrimaryDark" />

                <Button
                    android:id="@+id/status_cancelar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:onClick="clickStatus"
                    android:text="@string/cancelar"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>