<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/custom_dialog_layout_design_user_input"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    app:cardElevation="10dp"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Defina_sexo"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/feminino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feminino"/>

            <RadioButton
                android:id="@+id/masculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masculino"/>

        </RadioGroup>

    </LinearLayout>
</android.support.v7.widget.CardView>