<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ConsultaFragment">

    <android.support.v7.widget.CardView
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="10dp"
        android:background="@drawable/quadrado_formato"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:theme="@style/EditText">

                <EditText
                    android:id="@+id/evento_titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_titulo"
                    android:hint="@string/titulo"
                    android:textSize="15sp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:theme="@style/EditText">

                <EditText
                    android:id="@+id/data_evento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:drawableLeft="@drawable/ic_calendario"
                    android:drawablePadding="5dp"
                    android:hint="@string/data"
                    android:onClick="onClick"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:theme="@style/EditText">

                    <EditText
                        android:id="@+id/hora_evento"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:drawableLeft="@drawable/ic_relogio"
                        android:drawablePadding="5dp"
                        android:hint="@string/hora"
                        android:onClick="onClick"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Switch
                        android:id="@+id/switch_alert"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:onClick="onClick"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:drawableLeft="@drawable/ic_alarme"
                        android:drawablePadding="5dp"
                        android:hint="@string/alerta" />

                    <Spinner
                        android:id="@+id/spinner_hora_alarm"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditText"></Spinner>
                </LinearLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:theme="@style/EditText">

                <EditText
                    android:id="@+id/local_evento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:drawableLeft="@drawable/ic_local"
                    android:drawablePadding="5dp"
                    android:hint="@string/local"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:theme="@style/EditText">

                <EditText
                    android:id="@+id/nome_medico_evento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:drawableLeft="@drawable/ic_nome_medico"
                    android:drawablePadding="5dp"
                    android:hint="@string/nome_medico"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/consulta_salvar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:padding="5dp"
                    android:text="@string/salvar"
                    android:onClick="onClick"
                    android:textColor="@color/colorPrimaryDark">

                </Button>

                <Button
                    android:id="@+id/consulta_cancelar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:padding="5dp"
                    android:text="@string/cancelar"
                    android:onClick="onClick"
                    android:textColor="@color/colorPrimaryDark"></Button>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>