<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.TratamentoFragment">


    <android.support.v7.widget.CardView
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="10dp"
        android:background="@drawable/quadrado_formato"
        app:cardCornerRadius="10dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <EditText
                    android:id="@+id/evento_titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/titulo"
                    android:drawableLeft="@drawable/ic_titulo"
                    android:drawablePadding="5dp"
                    android:textSize="15sp" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:theme="@style/EditText">

                    <EditText
                        android:id="@+id/datainicial_evento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:drawableLeft="@drawable/ic_calendario"
                        android:drawablePadding="5dp"
                        android:hint="@string/data_inicial"
                        android:onClick="onClick"
                        android:inputType="number"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:theme="@style/EditText">

                    <EditText
                        android:id="@+id/datafinal_evento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:drawableLeft="@drawable/ic_calendario"
                        android:drawablePadding="5dp"
                        android:hint="@string/data_final"
                        android:onClick="onClick"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:theme="@style/EditText">

                    <EditText
                        android:id="@+id/hora_evento"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:drawableLeft="@drawable/ic_relogio"
                        android:drawablePadding="5dp"
                        android:hint="@string/hora"
                        android:onClick="onClick"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Switch
                        android:id="@+id/switch_alert"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:hint="@string/alerta"
                        android:onClick="onClick"
                        android:drawableLeft="@drawable/ic_alarme"
                        android:drawablePadding="5dp" />

                    <Spinner
                        android:id="@+id/spinner_hora_alarm"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditText"></Spinner>
                </LinearLayout>

            </LinearLayout>

            <MultiAutoCompleteTextView
                android:id="@+id/nome_medicamento_evento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:drawableLeft="@drawable/ic_nome_med"
                android:drawablePadding="5dp"
                android:completionThreshold="1"
                android:hint="@string/nome_medicamento" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/tratamento_salvar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:padding="5dp"
                android:text="@string/salvar"
                android:onClick="onClick"
                android:textColor="@color/colorPrimaryDark">

            </Button>

            <Button
                android:id="@+id/tratamento_cancelar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:padding="5dp"
                android:text="@string/cancelar"
                android:onClick="onClick"
                android:textColor="@color/colorPrimaryDark"></Button>
        </LinearLayout>

    </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>